--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "@types/nodemailer": "^7.0.4",
+    "@types/pdf-parse": "^1.1.5",
     "@types/pg": "^8.15.6",
     "@types/winston": "^2.4.4",
     "dotenv": "^17.2.3",
@@ -48,6 +49,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.943.0",
     "@aws-sdk/s3-request-presigner": "^3.943.0",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@types/bcrypt": "^6.0.0",
@@ -65,6 +67,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.16.3",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
