--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon --watch src --exec \"npx ts-node -r tsconfig-paths/register src/server.ts\"",
+    "dev": "nodemon src/server.ts",
     "generate:module": "npx ts-node bin/generate-module.ts",
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate dev",
